--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet">
   <!--Google Fonts-->
-  
+
   <title>ArtCoffee</title>
 </head>
 <body>
 
-  <header>
+  <header class="heading">
     <h1>Art<span>Cofffe</span></h1>
     <p>Aberto todos os dias. 8h - 21h</p>
   </header>
